package.json url corrected

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todo-list-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/mikej44/todos-list-react/",
+  "homepage": "https://mikej44.github.io/todos-list-react/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
